// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle onSubmit with empty form 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Title"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      -- Please select --
    </option>
    <option
      key="Absinthe"
      value="Absinthe"
    >
      Absinthe
    </option>
    <option
      key="Beer"
      value="Beer"
    >
      Beer
    </option>
    <option
      key="Brandy"
      value="Brandy"
    >
      Brandy
    </option>
    <option
      key="Cider"
      value="Cider"
    >
      Cider
    </option>
    <option
      key="Gin"
      value="Gin"
    >
      Gin
    </option>
    <option
      key="Horilka"
      value="Horilka"
    >
      Horilka
    </option>
    <option
      key="Liqueurs"
      value="Liqueurs"
    >
      Liqueurs
    </option>
    <option
      key="Mastika"
      value="Mastika"
    >
      Mastika
    </option>
    <option
      key="Ouzo"
      value="Ouzo"
    >
      Ouzo
    </option>
    <option
      key="Rakia"
      value="Rakia"
    >
      Rakia
    </option>
    <option
      key="Slivovitz"
      value="Slivovitz"
    >
      Slivovitz
    </option>
    <option
      key="Rum"
      value="Rum"
    >
      Rum
    </option>
    <option
      key="Sparkling Wine"
      value="Sparkling Wine"
    >
      Sparkling Wine
    </option>
    <option
      key="Tequila"
      value="Tequila"
    >
      Tequila
    </option>
    <option
      key="Vodka"
      value="Vodka"
    >
      Vodka
    </option>
    <option
      key="Vermouth"
      value="Vermouth"
    >
      Vermouth
    </option>
    <option
      key="Wine"
      value="Wine"
    >
      Wine
    </option>
    <option
      key="Whisky"
      value="Whisky"
    >
      Whisky
    </option>
  </select>
  <select
    className="select"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      -- Please select --
    </option>
    <option
      key="0.02"
      value={0.02}
    >
      0.02
    </option>
    <option
      key="0.2"
      value={0.2}
    >
      0.2
    </option>
    <option
      key="0.25"
      value={0.25}
    >
      0.25
    </option>
    <option
      key="0.33"
      value={0.33}
    >
      0.33
    </option>
    <option
      key="0.375"
      value={0.375}
    >
      0.375
    </option>
    <option
      key="0.5"
      value={0.5}
    >
      0.5
    </option>
    <option
      key="0.6"
      value={0.6}
    >
      0.6
    </option>
    <option
      key="0.7"
      value={0.7}
    >
      0.7
    </option>
    <option
      key="0.75"
      value={0.75}
    >
      0.75
    </option>
    <option
      key="1"
      value={1}
    >
      1
    </option>
    <option
      key="1.5"
      value={1.5}
    >
      1.5
    </option>
    <option
      key="5"
      value={5}
    >
      5
    </option>
  </select>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Alcohol"
    type="text"
    value=""
  />
  <input
    className="text-input"
    id="price"
    onChange={[Function]}
    placeholder="Price"
    type="text"
    value=""
  />
  <input
    className="text-input"
    id="madeIn"
    onChange={[Function]}
    placeholder="Country of origin"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Specify aged of drink (optional)"
    type="text"
    value=""
  />
  <textarea
    className="text-area"
    onChange={[Function]}
    placeholder="Description for your drink (optional)"
    value=""
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={null}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Bought date"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={false}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={null}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Bottled date"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={false}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={null}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Best before"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={true}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <div>
    <button
      className="button"
    />
  </div>
</form>
`;

exports[`should render DrinkForm with data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Title"
    type="text"
    value="Cardhu Speyside Single Malt Scotch Whisky"
  />
  <select
    className="select"
    onChange={[Function]}
    value="Whisky"
  >
    <option
      value=""
    >
      -- Please select --
    </option>
    <option
      key="Absinthe"
      value="Absinthe"
    >
      Absinthe
    </option>
    <option
      key="Beer"
      value="Beer"
    >
      Beer
    </option>
    <option
      key="Brandy"
      value="Brandy"
    >
      Brandy
    </option>
    <option
      key="Cider"
      value="Cider"
    >
      Cider
    </option>
    <option
      key="Gin"
      value="Gin"
    >
      Gin
    </option>
    <option
      key="Horilka"
      value="Horilka"
    >
      Horilka
    </option>
    <option
      key="Liqueurs"
      value="Liqueurs"
    >
      Liqueurs
    </option>
    <option
      key="Mastika"
      value="Mastika"
    >
      Mastika
    </option>
    <option
      key="Ouzo"
      value="Ouzo"
    >
      Ouzo
    </option>
    <option
      key="Rakia"
      value="Rakia"
    >
      Rakia
    </option>
    <option
      key="Slivovitz"
      value="Slivovitz"
    >
      Slivovitz
    </option>
    <option
      key="Rum"
      value="Rum"
    >
      Rum
    </option>
    <option
      key="Sparkling Wine"
      value="Sparkling Wine"
    >
      Sparkling Wine
    </option>
    <option
      key="Tequila"
      value="Tequila"
    >
      Tequila
    </option>
    <option
      key="Vodka"
      value="Vodka"
    >
      Vodka
    </option>
    <option
      key="Vermouth"
      value="Vermouth"
    >
      Vermouth
    </option>
    <option
      key="Wine"
      value="Wine"
    >
      Wine
    </option>
    <option
      key="Whisky"
      value="Whisky"
    >
      Whisky
    </option>
  </select>
  <select
    className="select"
    onChange={[Function]}
    value={0.7}
  >
    <option
      value=""
    >
      -- Please select --
    </option>
    <option
      key="0.02"
      value={0.02}
    >
      0.02
    </option>
    <option
      key="0.2"
      value={0.2}
    >
      0.2
    </option>
    <option
      key="0.25"
      value={0.25}
    >
      0.25
    </option>
    <option
      key="0.33"
      value={0.33}
    >
      0.33
    </option>
    <option
      key="0.375"
      value={0.375}
    >
      0.375
    </option>
    <option
      key="0.5"
      value={0.5}
    >
      0.5
    </option>
    <option
      key="0.6"
      value={0.6}
    >
      0.6
    </option>
    <option
      key="0.7"
      value={0.7}
    >
      0.7
    </option>
    <option
      key="0.75"
      value={0.75}
    >
      0.75
    </option>
    <option
      key="1"
      value={1}
    >
      1
    </option>
    <option
      key="1.5"
      value={1.5}
    >
      1.5
    </option>
    <option
      key="5"
      value={5}
    >
      5
    </option>
  </select>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Alcohol"
    type="text"
    value={40}
  />
  <input
    className="text-input"
    id="price"
    onChange={[Function]}
    placeholder="Price"
    type="text"
    value="54.72"
  />
  <input
    className="text-input"
    id="madeIn"
    onChange={[Function]}
    placeholder="Country of origin"
    type="text"
    value="Scotland"
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Specify aged of drink (optional)"
    type="text"
    value="12 years"
  />
  <textarea
    className="text-area"
    onChange={[Function]}
    placeholder="Description for your drink (optional)"
    value=""
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={"1968-01-01T00:00:00.000Z"}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Bought date"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={false}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={"1964-01-01T00:00:00.000Z"}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Bottled date"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={false}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={"1970-11-01T00:00:00.000Z"}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Best before"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={true}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <div>
    <button
      className="button"
    />
  </div>
</form>
`;

exports[`should render empty DrinkForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Title"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      -- Please select --
    </option>
    <option
      key="Absinthe"
      value="Absinthe"
    >
      Absinthe
    </option>
    <option
      key="Beer"
      value="Beer"
    >
      Beer
    </option>
    <option
      key="Brandy"
      value="Brandy"
    >
      Brandy
    </option>
    <option
      key="Cider"
      value="Cider"
    >
      Cider
    </option>
    <option
      key="Gin"
      value="Gin"
    >
      Gin
    </option>
    <option
      key="Horilka"
      value="Horilka"
    >
      Horilka
    </option>
    <option
      key="Liqueurs"
      value="Liqueurs"
    >
      Liqueurs
    </option>
    <option
      key="Mastika"
      value="Mastika"
    >
      Mastika
    </option>
    <option
      key="Ouzo"
      value="Ouzo"
    >
      Ouzo
    </option>
    <option
      key="Rakia"
      value="Rakia"
    >
      Rakia
    </option>
    <option
      key="Slivovitz"
      value="Slivovitz"
    >
      Slivovitz
    </option>
    <option
      key="Rum"
      value="Rum"
    >
      Rum
    </option>
    <option
      key="Sparkling Wine"
      value="Sparkling Wine"
    >
      Sparkling Wine
    </option>
    <option
      key="Tequila"
      value="Tequila"
    >
      Tequila
    </option>
    <option
      key="Vodka"
      value="Vodka"
    >
      Vodka
    </option>
    <option
      key="Vermouth"
      value="Vermouth"
    >
      Vermouth
    </option>
    <option
      key="Wine"
      value="Wine"
    >
      Wine
    </option>
    <option
      key="Whisky"
      value="Whisky"
    >
      Whisky
    </option>
  </select>
  <select
    className="select"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      -- Please select --
    </option>
    <option
      key="0.02"
      value={0.02}
    >
      0.02
    </option>
    <option
      key="0.2"
      value={0.2}
    >
      0.2
    </option>
    <option
      key="0.25"
      value={0.25}
    >
      0.25
    </option>
    <option
      key="0.33"
      value={0.33}
    >
      0.33
    </option>
    <option
      key="0.375"
      value={0.375}
    >
      0.375
    </option>
    <option
      key="0.5"
      value={0.5}
    >
      0.5
    </option>
    <option
      key="0.6"
      value={0.6}
    >
      0.6
    </option>
    <option
      key="0.7"
      value={0.7}
    >
      0.7
    </option>
    <option
      key="0.75"
      value={0.75}
    >
      0.75
    </option>
    <option
      key="1"
      value={1}
    >
      1
    </option>
    <option
      key="1.5"
      value={1.5}
    >
      1.5
    </option>
    <option
      key="5"
      value={5}
    >
      5
    </option>
  </select>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Alcohol"
    type="text"
    value=""
  />
  <input
    className="text-input"
    id="price"
    onChange={[Function]}
    placeholder="Price"
    type="text"
    value=""
  />
  <input
    className="text-input"
    id="madeIn"
    onChange={[Function]}
    placeholder="Country of origin"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Specify aged of drink (optional)"
    type="text"
    value=""
  />
  <textarea
    className="text-area"
    onChange={[Function]}
    placeholder="Description for your drink (optional)"
    value=""
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={null}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Bought date"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={false}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={null}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Bottled date"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={false}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <SingleDatePicker
    anchorDirection="left"
    customCloseIcon={null}
    customInputIcon={null}
    date={null}
    daySize={39}
    disabled={false}
    displayFormat={[Function]}
    enableOutsideDays={false}
    firstDayOfWeek={null}
    focused={false}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    id="date"
    initialVisibleMonth={null}
    isDayBlocked={[Function]}
    isDayHighlighted={[Function]}
    isOutsideRange={[Function]}
    isRTL={false}
    keepOpenOnDateSelect={false}
    monthFormat="MMMM YYYY"
    navNext={null}
    navPrev={null}
    numberOfMonths={1}
    onClose={[Function]}
    onDateChange={[Function]}
    onFocusChange={[Function]}
    onNextMonthClick={[Function]}
    onPrevMonthClick={[Function]}
    orientation="horizontal"
    phrases={
      Object {
        "chooseAvailableDate": [Function],
        "clearDate": "Clear Date",
        "closeDatePicker": "Close",
        "dateIsUnavailable": [Function],
        "enterKey": "Enter key",
        "escape": "Escape key",
        "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
        "homeEnd": "Home and end keys",
        "jumpToNextMonth": "Move forward to switch to the next month",
        "jumpToPrevMonth": "Move backward to switch to the previous month",
        "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
        select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
        "keyboardShortcuts": "Keyboard Shortcuts",
        "leftArrowRightArrow": "Right and left arrow keys",
        "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
        "moveFocusByOneMonth": "Switch months",
        "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
        "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
        "openThisPanel": "Open this panel",
        "pageUpPageDown": "page up and page down keys",
        "questionMark": "Question mark",
        "returnFocusToInput": "Return to the date input field",
        "selectFocusedDate": "Select the date in focus",
        "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
        "upArrowDownArrow": "up and down arrow keys",
      }
    }
    placeholder="Best before"
    readOnly={false}
    renderCalendarInfo={null}
    renderDay={null}
    renderMonth={null}
    reopenPickerOnClearDate={false}
    required={true}
    screenReaderInputMessage=""
    showClearDate={false}
    showDefaultInputIcon={false}
    withFullScreenPortal={false}
    withPortal={false}
  />
  <div>
    <button
      className="button"
    >
      Test title
    </button>
  </div>
</form>
`;
